@@ -19,6 +19,11 @@
     <h1>Change history since v4.2</h1>
     <p>
         <ul>
+            <li>Support for auto roll initiative at combat start</li>
+            <li>Auto delete of blessed shield when changing the status icon</li>
+            <li>Added Limited View of character sheets</li>
+            <li>Fixed issue API additions, including roll-returns give a promise</li>
+            <li>Table rolling text enrichers for journals</li>
             <li>Fixed issue #600</li>
             <li>Fixed issue #601</li>
             <li>Made compatible with v10 & v11</li>
